--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ feign.url=localhost:8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.sleuth.sampler.probability=1.0
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/pharmacierealm
+feign.client.config.default.loggerLevel=full
