--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/pharmacierealm
+spring.sleuth.sampler.probability=1.0
