added docker image config in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>thiccmoustache/${project.artifactId}:${project.version}
+                    </image>
+                    <pullPolicy>IF_NOT_PRESENT</pullPolicy>
+                </configuration>
             </plugin>
         </plugins>
     </build>
