--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.youssef.pharmacies</groupId>
-    <artifactId>configServer</artifactId>
+    <artifactId>configserver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>configServer</name>
+    <name>configserver</name>
     <description>configServer</description>
     <properties>
         <java.version>11</java.version>
@@ -63,7 +63,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <image>
-                        <name>youssef/${project.artifactId}:${project.version}</name>
+                        <name>thiccmoustache/${project.artifactId}:${project.version}</name>
                         <pullPolicy>IF_NOT_PRESENT</pullPolicy>
                     </image>
                 </configuration>
