--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/pharmacierealm
 spring.sleuth.sampler.probability=1.0
+hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
