found temporary solution to fetch events with distance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/pharmacierealm
 spring.sleuth.sampler.probability=1.0
 hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
+#todo remove 2 lines below
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
