--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=config-server
 server.port=8888
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.server.git.uri=https://github.com/youssef-chaker/pharmacie-config.git
