--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,20 @@ spring.application.name=user-microservice
 #spring.jpa.hibernate.ddl-auto=update
 #spring.data.rest.basePath=/api
 #management.endpoints.web.exposure.include=health,mappings,info,env,beans
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 feign.url=localhost:8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.sleuth.sampler.probability=1.0
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/pharmacierealm
 feign.client.config.default.loggerLevel=full
+server.port=8000
+spring.datasource.url=jdbc:postgresql://localhost:5432/pharmacie
+spring.datasource.username=youssef
+spring.datasource.password=youssef
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.data.rest.basePath=/api
+management.endpoints.web.exposure.include=health,mappings,info,env,beans
+#todo remove 2 lines below
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
