added upload and retrieve image to/from s3 bucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
 #todo remove 2 lines below
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
+s3.bucket=demo-bucket-youssef
